# dotfiles

./: .bashrc.swp  .gitignore  .gitmodules  .vimrc  CLAUDE.md  FRESH_PACKAGES  LICENSE  README.md  TODO  backup_cinnamon_settings.sh  bash_profile  bashrc  condarc  ctags  dot-install.sh  firefox-secured-user.js  fresh_setup.sh  fresh_system_setup.sh  gemrc  gitconfig  install  legacy-install  muttrc  nvim  proprietary_nvidia_drivers.sh  pry  publickey.gpg  restore_cinnamon_settings.sh  rvmrc  sqliterc  starship.toml  system_setup.sh  tmux.conf  toprc  trusted_keys.txt  vim-spellfile.add  vim-spellfile.add.spl  vimrc
aichat/: .gitignore  config.yaml.example  roles.yaml
cinnamon/: cinnamon.settings.bak  dconf.settings.bak  gnome.settings.bak  (+1 more)
configs/claude/marketplace/plugins/constant-time-analysis/: README.md  VENDORED.md  pyproject.toml
configs/claude/marketplace/plugins/constant-time-analysis/.claude-plugin/: plugin.json
configs/claude/marketplace/plugins/constant-time-analysis/commands/: ct-check.md
configs/claude/marketplace/plugins/constant-time-analysis/ct_analyzer/: __init__.py  analyzer.py  script_analyzers.py
configs/claude/marketplace/plugins/constant-time-analysis/ct_analyzer/tests/: __init__.py  test_analyzer.py
configs/claude/marketplace/plugins/constant-time-analysis/ct_analyzer/tests/test_samples/: bn_excerpt.js  decompose_constant_time.c  decompose_vulnerable.c  decompose_vulnerable.go  decompose_vulnerable.rs  vulnerable.cs  vulnerable.java  vulnerable.kt  vulnerable.php  vulnerable.py  vulnerable.rb  vulnerable.swift  vulnerable.ts
configs/claude/marketplace/plugins/constant-time-analysis/skills/constant-time-analysis/: README.md  SKILL.md
configs/claude/marketplace/plugins/constant-time-analysis/skills/constant-time-analysis/references/: compiled.md  javascript.md  kotlin.md  php.md  python.md  ruby.md  swift.md  vm-compiled.md
configs/claude/marketplace/plugins/culture-index/skills/interpreting-culture-index/scripts/: check_deps.py  extract_pdf.py  pyproject.toml
configs/claude/marketplace/plugins/culture-index/skills/interpreting-culture-index/scripts/culture_index/: __init__.py  constants.py  extract.py  models.py  opencv_extractor.py
(+957 files in other folders)
